Loop through all collections, output nav

--- a/_config.yml
+++ b/_config.yml
@@ -26,19 +26,21 @@ baseurl: "" # the subpath of your site, e.g. /blog
 # url: "https://example.gov" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Collections organize content and allow us to iterate over each
-collections_dir: sections
-
 collections: 
   introduction:
+    title: Introduction
     output: true
     permalink: /introduction/:path/
   content_types:
+    title: Content types
     output: true
     permalink: /content-types/:path/
   our_approach:
+    title: Our approach
     output: true
     permalink: /our-approach/:path/
   our_style:
+    title: Our style
     output: true
     permalink: /our-style/:path/ 
 
