--- a/_config.yml
+++ b/_config.yml
@@ -29,18 +29,22 @@ baseurl: "" # the subpath of your site, e.g. /blog
 collections: 
   introduction:
     title: Introduction
+    sequence: 1
     output: true
     permalink: /introduction/:path/
   content_types:
     title: Content types
+    sequence: 4
     output: true
     permalink: /content-types/:path/
   our_approach:
     title: Our approach
+    sequence: 2
     output: true
     permalink: /our-approach/:path/
   our_style:
     title: Our style
+    sequence: 3
     output: true
     permalink: /our-style/:path/ 
 
