--- a/_data/usa_anchor.yaml
+++ b/_data/usa_anchor.yaml
@@ -2,7 +2,7 @@
 # See usa_anchor.html for the template
 
 anchor_data:
-  - site_name: 18F UX Guide
+  - site_name: 18F Content Guide
     site_email: 18F@gsa.gov
     site_url: https://derisking-guide.18f.gsa.gov
     site_about: https://derisking-guide.18f.gsa.gov
