--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,36 +39,36 @@ our-approach:
 
 our-style:
   - text: Abbreviations and acronyms
-    href: /our-style/abbreviations-and-acronyms
+    href: /our-style/abbreviations-and-acronyms/
   - text: Active voice
-    href: /our-style/active-voice
+    href: /our-style/active-voice/
   - text: Capitalization
-    href: /our-style/capitalization    
+    href: /our-style/capitalization/  
   - text: Inclusive language
-    href: /our-style/inclusive-language
+    href: /our-style/inclusive-language/
   - text: Names
-    href: /our-style/names
+    href: /our-style/names/
   - text: Numbers and percentages
-    href: /our-style/numbers-and-percentages 
+    href: /our-style/numbers-and-percentages/
   - text: Punctuation
-    href: /our-style/punctuation 
+    href: /our-style/punctuation/
   - text: Specific words and phrases
-    href: /our-style/specific-words-and-phrases
+    href: /our-style/specific-words-and-phrases/
   - text: Voice and tone
-    href: /our-style/voice-and-tone 
+    href: /our-style/voice-and-tone/
 
 content-types:
   - text: Forms
-    href: /content-types/forms
+    href: /content-types/forms/
   - text: Headings and titles
-    href: /content-types/headings-and-titles
+    href: /content-types/headings-and-titles/
   - text: Images
-    href: /content-types/images
+    href: /content-types/images/
   - text: Style guides
-    href: /content-types/style-guides
+    href: /content-types/style-guides/
   - text: Technical and interface writing
-    href: /content-types/technical-and-interface-writing
+    href: /content-types/technical-and-interface-writing/
   - text: Trademarks and brands
-    href: /content-types/trademarks-and-brands
+    href: /content-types/trademarks-and-brands/
   - text: URLs and filenames
-    href: /content-types/urls-and-filenames   
+    href: /content-types/urls-and-filenames/  
