--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >-
   resources, norms, and practices for doing user
   experience research and design work at 18F.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://ux-guide.18f.gov" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://content-guide.18f.gov" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 18F
 github_username:  18F
 
@@ -38,7 +38,7 @@ google_analytics_ua: UA-48605964-19
 dap_agency: GSA
 
 # Add search site handle to enable search
-search_site_handle: ux-guide.18f.gov
+search_site_handle: content-guide.18f.gov
 
 scripts:
   - assets/uswds/js/uswds.min.js
